# ESP32P4-ComputerDashboard

./: LICENSE  README.md  readme.md
InfoServer/: info_server.py  开机自启.bat
SquareLineStudio_Project/: ComputerDashboard.sll  ComputerDashboard.spj  ComputerDashboard_events.py  Themes.slt
SquareLineStudio_Project/assets/: ui_font_Chinese24.c  ui_font_Chinese24.fcfg  ui_font_Font1.c  ui_font_Font1.fcfg  ui_font_Font150.fcfg  ui_font_Font50.fcfg  ui_font_Font75.c  ui_font_Font75.fcfg  ui_font_Pixel150.c  ui_font_Pixel150.fcfg  ui_font_Pixel200.fcfg  ui_font_Pixel2150.fcfg  ui_font_Pixel45.c  ui_font_Pixel45.fcfg  ui_font_number100.fcfg  ui_font_number150.c  ui_font_number150.fcfg  ui_font_weatherfont28.c  ui_font_weatherfont28.fcfg
lvgl_clock/: CMakeLists.txt  partitions.csv
lvgl_clock/components/bsp_extra/: CMakeLists.txt  Kconfig  idf_component.yml
lvgl_clock/components/cJSON/: CMakeLists.txt
lvgl_clock/components/libpng/: CMakeLists.txt
lvgl_clock/components/lvgl_libpng_glue/: CMakeLists.txt  dummy.c
lvgl_clock/components/tasks/: CMakeLists.txt  tasks.c  tasks.h
lvgl_clock/components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_theme_manager.h  ui_themes.c  ui_themes.h
lvgl_clock/components/ui/components/: ui_comp_hook.c
lvgl_clock/components/ui/fonts/: ui_font_Font150.c  ui_font_Font50.c  ui_font_Pixel200.c  ui_font_Pixel2150.c  ui_font_number100.c
lvgl_clock/components/ui/images/: ui_img_1010931293.c  (+25 more)
lvgl_clock/main/: CMakeLists.txt  idf_component.yml  main.c
(+18 files in other folders)
